# fotogram

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.front  README.MD  README.md  docker-compose.yaml  frontend.conf  index.html  pyproject.toml  red
.github/workflows/: ci.yaml
deploy/: docker-compose.yaml
files/: a0372ee9-7e19-48e7-81a3-cd3fba62d439.GEesWTbUlCQxqVXdZ3XwPYVEB4ivTQVrQjeWLytFmK4
front/: auth.html  chat.html  index.html  login.html  post_user_auth.html  signup.html  style.css  subscribe.html  user.html
front/static/: style.css
src/: alembic.ini  app.py  create_tables.py  database.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 0c5ee5267c3f_upgrade.py  3e1712a6bda1_upgrade.py  9b34d63effb5_create_all_tables.py  9ccf6a03aa34_initial_migration.py  a9e9e75dd3ce_baseline_migration.py  ed98fc81241b_add_chat_messages_table.py  f9e5b7a3e0ee_create_messages_table.py
src/files/: models.py  routing.py  services.py
src/posts/: models.py  routing.py  schemas.py  services.py
src/users/: __init.py__.py  models.py  routing.py  schemas.py  services.py
